feat(renderer): implement advanced environment mapping and post-processing effects
- Added a post-processing system to the Renderer class for enhanced visual effects.
- Improved environment mapping with a more sophisticated cubemap generation, including sky and ground gradients.
- Introduced new shader uniforms for environment mapping and reflection handling.
- Enhanced the fragment shader to support reflections and refractions based on material properties.
- Added UI controls for enabling/disabling post-processing and configuring bloom effects.
- Created a SoundSynthesizer class to dynamically generate sound effects for various material types.
- Implemented sound generation methods for metal, wood, glass, and soft impacts, along with ambient sound.

--- a/index.html
+++ b/index.html
@@ -51,7 +51,9 @@
     <script src="js/modules/physics.js"></script>
     <script src="js/modules/interaction.js"></script>
     <script src="js/modules/audio-system.js"></script>
+    <script src="js/modules/post-process.js"></script>
     <script src="js/modules/ui.js"></script>
+    <script src="js/modules/sound-synthesizer.js"></script>
     
     <!-- Main file -->
     <script src="js/main.js"></script>
