feat(audio): upgrade to p5.js v1.9.0 and enhance audio initialization process

--- a/index.html
+++ b/index.html
@@ -29,9 +29,10 @@
     <div class="ui-container" id="ui-container"></div>
     
     <!-- Libraries -->
-    <!-- Use p5.js v1.4.0 which has better compatibility with p5.sound -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.min.js"></script>    <!-- Load p5.sound after p5.js -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/addons/p5.sound.min.js"></script>
+    <!-- Upgrade to p5.js v1.9.0 -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.0/p5.min.js"></script>
+    <!-- Load corresponding p5.sound addon -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.0/addons/p5.sound.min.js"></script>
 
     
     <script src="https://cdn.jsdelivr.net/npm/tweakpane@3.1.0/dist/tweakpane.min.js"></script>
